fix: use spacing in app

--- a/shared-helpers/src/views/components/BloomCard.module.scss
+++ b/shared-helpers/src/views/components/BloomCard.module.scss
@@ -6,6 +6,7 @@
     --card-header-padding-inline: var(--seeds-s4);
     --card-border-radius: 0;
   }
+  width: 100%;
 }
 
 .block-card {
